started working on services area

--- a/index.html
+++ b/index.html
@@ -201,6 +201,81 @@
         </section>
 
         <!-- End Brand Area -->
+
+        <!-- Start Services Area -->
+
+        <div class="services-area">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center services-title">
+                        <h1 class="text-uppercase title-text">Services Offers</h1>
+                        <p class="para">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere quaerat atque recusandae sint nobis deleniti placeat at, consequatur commodi explicabo!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="container services-list">
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="services-img text-center py-4">
+                                    <img src="./img/services/s1.png" alt="service-1">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">WP Developer</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt natus nesciunt? Atque, voluptatem harum!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="services-img text-center py-4">
+                                    <img src="./img/services/s2.png" alt="service-2">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">UX/UI Design</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt natus nesciunt? Atque, voluptatem harum!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="services-img text-center py-4">
+                                    <img src="./img/services/s3.png" alt="service-3">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">Web Design</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt natus nesciunt? Atque, voluptatem harum!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12">
+                            <div class="services">
+                                <div class="services-img text-center py-4">
+                                    <img src="./img/services/s4.png" alt="service-4">
+                                </div>
+                                <div class="card-body text-center">
+                                    <h5 class="card-title text-uppercase font-roboto">SEO Optimize</h5>
+                                    <p class="card-text text-secondary">
+                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui sunt natus nesciunt? Atque, voluptatem harum!
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- End Services Area -->
         </main> 
     
     
