--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- ====================== Start Main area ======================-->
 
-    <main class="site-main">
+    <main class="site-main" style="padding-bottom: 40px;">
         <!-- ====================== Start Banner Area ======================-->
 
         <section class="site-banner">
@@ -536,6 +536,35 @@
         </section>
 
         <!-- End About Me Area -->
+
+        <!-- Subscribe me Area Start -->
+        <section class="subscribe-us-area">
+            <div class="container subscribe">
+                <div class="row">
+                    <div class="col-lg-12 text-center subscribe-title">
+                        <h4 class="text-uppercase">
+                            Get Update From Anywhere
+                        </h4>
+                        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, at!</p>
+                    </div>
+                </div>
+                <div class="d-sm-flex justify-content-center">
+                    <form class="w-50">
+                        <div class="row d-flex flex-row flex-wrap">
+                            <div class="col input-textbox">
+                                <input type="text" id="txtemail" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="col">
+                                <div class="btn-submit">
+                                    <button class="btn btn-success float-right" type="button">Subscribe</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <!-- Subscribe me Area End -->
     </main>
 
 
