completed footer section

--- a/index.html
+++ b/index.html
@@ -567,11 +567,35 @@
         <!-- Subscribe me Area End -->
     </main>
 
-
-
-
     <!-- ====================== End Main area ======================-->
 
+            <!-- footer section start -->
+            <footer class="footer-area">
+                <div class="container">
+                    <div>
+                        <div class="site-logo text-center py-4">
+                            <a href="#"><img src="./img/logo.png" alt="logo"></a>
+                        </div>
+                        <div class="social text-center">
+                            <h5 class="text-uppercase">Follow Me</h5>
+                            <a href="#"><i class="fab fa-facebook"></i></a>
+                            <a href="#"><i class="fab fa-instagram"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin"></i></a>
+                            <a href="#"><i class="fab fa-youtube"></i></a>
+                        </div>
+                        <div class="copyrights text-center">
+                            <p class="para">
+                                Copyright @2023. All right reserved by Jitendra Suthar.
+                                <a href="#">
+                                    <span style="color: var(--primary-color);">Daily Tution</span>
+                                </a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
+        <!-- footer section end -->
 
     <!-- Jquery js file -->
     <script src="./js/jquery.3.6.1.js"></script>
