working on making site responsive

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css" />
 
+    <!-- responsive css -->
+
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 
 <body>
