linked nav-tabs to different sections of portfolio website

--- a/index.html
+++ b/index.html
@@ -34,25 +34,23 @@
     <header class="header_area">
         <div class="main-menu">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="./img/logo.png" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="mr-auto"></div>
                     <ul class="navbar-nav">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about-area">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#services-area">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="#project-area">Portfolio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Pages</a>
@@ -61,7 +59,7 @@
                             <a class="nav-link" href="#">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#subscribe-us-area">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -105,7 +103,7 @@
 
         <!-- ====================== Start About Area ======================-->
 
-        <section class="about-area">
+        <section class="about-area" id="about-area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
@@ -142,7 +140,7 @@
 
         <!-- Start Brand Area -->
 
-        <section class="brand-area">
+        <section class="brand-area" id="brand-area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xl-6 col-lg-12 col-md-12">
@@ -222,7 +220,7 @@
 
         <!-- Start Services Area -->
 
-        <section class="services-area">
+        <section class="services-area" id="services-area">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center services-title">
@@ -303,7 +301,7 @@
 
         <!-- Start Project Area -->
 
-        <section class="project-area">
+        <section class="project-area" id="project-area">
             <div class="container">
                 <div class="project-title pb-5">
                     <h1 class="text-uppercase title-h1">Recently Done Projects</h1>
@@ -541,7 +539,7 @@
         <!-- End About Me Area -->
 
         <!-- Subscribe me Area Start -->
-        <section class="subscribe-us-area">
+        <section class="subscribe-us-area" id="subscribe-us-area">
             <div class="container subscribe">
                 <div class="row">
                     <div class="col-lg-12 text-center subscribe-title">
@@ -575,26 +573,18 @@
             <!-- footer section start -->
             <footer class="footer-area">
                 <div class="container">
-                    <div>
-                        <div class="site-logo text-center py-4">
-                            <a href="#"><img src="./img/logo.png" alt="logo"></a>
-                        </div>
-                        <div class="social text-center">
-                            <h5 class="text-uppercase">Follow Me</h5>
-                            <a href="#"><i class="fab fa-facebook"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
-                        </div>
-                        <div class="copyrights text-center">
-                            <p class="para">
-                                Copyright @2023. All right reserved by Jitendra Suthar.
-                                <a href="#">
-                                    <span style="color: var(--primary-color);">Daily Tution</span>
-                                </a>
-                            </p>
-                        </div>
+                    <div class="social text-center">
+                        <h5 class="text-uppercase">Follow Me</h5>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                    <div class="copyrights text-center">
+                        <p class="para">
+                            Copyright @2023. All right reserved by Jitendra Suthar.
+                        </p>
                     </div>
                 </div>
             </footer>
